--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+	<div class="right-nav">
+		<a href="#"><img src="image/entyo.jpg"></a>
+	</div>
 	<div class="rakuten">
 		<div class="header-wrapper">
 			<iframe class="header" src="header.html" frameborder="no"></iframe>
