--- a/slider2.html
+++ b/slider2.html
@@ -11,46 +11,46 @@
 		<!-- メイン表示部分 -->
 		<div class="swiper-wrapper">
 			<!-- 各スライド -->
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
-			<div class="swiper-slide"><a href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
+			<div class="swiper-slide"><a target="_top" href="#">時短の為、省略</a></div>
 		</div>
 	</div>
 
